feat: add home header components & routes & store

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,5 +15,6 @@
         setRemUnit();
         window.addEventListener('resize', setRemUnit);
     </script>
+    <script src='./dll/react.dll.js'></script>
 </body>
 </html>
